--- a/404.html
+++ b/404.html
@@ -12,12 +12,12 @@
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://harpreet287.github.io/404.html" />
 
-<title>404 Page not found | Harpreet&#39;s blog</title>
+<title>404 Page not found | Harpreet Singh</title>
 <link rel="manifest" href="/manifest.json">
 <link rel="icon" href="/favicon.png" >
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.21a2c4c324a10b7da975183c722c458be51f0865a3136f2fdf7da7bf10fa17e7.js" integrity="sha256-IaLEwyShC32pdRg8cixFi&#43;UfCGWjE28v332nvxD6F&#43;c=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.b40522cb4a619b74b437521c29d02659bcd80c51af7b2ef856bc67c59abeac76.js" integrity="sha256-tAUiy0phm3S0N1IcKdAmWbzYDFGvey74VrxnxZq&#43;rHY=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
@@ -42,7 +42,7 @@ https://github.com/alex-shpak/hugo-book
         <h1>404</h1>
         <h2>Page Not Found</h2>
         <h3>
-          <a href="/">Harpreet&#39;s blog</a>
+          <a href="/">Harpreet Singh</a>
         </h3>
       </div>
     </main>
