--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
 <meta name="description" content="">
 <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ffffff">
 <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#343a40">
-<meta name="color-scheme" content="light dark"><meta property="og:title" content="Harpreet&#39;s blog" />
+<meta name="color-scheme" content="light dark"><meta property="og:title" content="Harpreet Singh" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://harpreet287.github.io/" />
 
-<title>Harpreet&#39;s blog | Harpreet&#39;s blog</title>
+<title>Harpreet Singh | Harpreet Singh</title>
 <link rel="manifest" href="/manifest.json">
 <link rel="icon" href="/favicon.png" >
 <link rel="stylesheet" href="/book.min.33a48f5432973b8ff9a82679d9e45d67f2c15d4399bd2829269455cfe390b5e8.css" integrity="sha256-M6SPVDKXO4/5qCZ52eRdZ/LBXUOZvSgpJpRVz&#43;OQteg=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.21a2c4c324a10b7da975183c722c458be51f0865a3136f2fdf7da7bf10fa17e7.js" integrity="sha256-IaLEwyShC32pdRg8cixFi&#43;UfCGWjE28v332nvxD6F&#43;c=" crossorigin="anonymous"></script>
-<link rel="alternate" type="application/rss+xml" href="https://harpreet287.github.io/index.xml" title="Harpreet's blog" />
+  <script defer src="/en.search.min.b40522cb4a619b74b437521c29d02659bcd80c51af7b2ef856bc67c59abeac76.js" integrity="sha256-tAUiy0phm3S0N1IcKdAmWbzYDFGvey74VrxnxZq&#43;rHY=" crossorigin="anonymous"></script>
+<link rel="alternate" type="application/rss+xml" href="https://harpreet287.github.io/index.xml" title="Harpreet Singh" />
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
@@ -34,7 +34,7 @@ https://github.com/alex-shpak/hugo-book
         
   <nav>
 <h2 class="book-brand">
-  <a class="flex align-center" href="/"><span>Harpreet&#39;s blog</span>
+  <a class="flex align-center" href="/"><span>Harpreet Singh</span>
   </a>
 </h2>
 
@@ -112,7 +112,7 @@ https://github.com/alex-shpak/hugo-book
     <img src="/svg/menu.svg" class="book-icon" alt="Menu" />
   </label>
 
-  <strong>Harpreet&#39;s blog</strong>
+  <strong>Harpreet Singh</strong>
 
   <label for="toc-control">
     
