--- a/index.html
+++ b/index.html
@@ -315,6 +315,9 @@ If your like my articles, click the link below and give me a star on the right t
 
 
 
+<script id="partials/analytics.html" 
+  data-goatcounter="https://rollinghash.goatcounter.com/count"
+  async src="//gc.zgo.at/count.js"></script>
 
 
 
